--- a/src/main/resources/mymall.properties
+++ b/src/main/resources/mymall.properties
@@ -6,5 +6,5 @@ ftp.server.http.prefix=http://image.hua.test/image/
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
 
-password.salt = sdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+password.salt=hua!@#23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
